--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "bumpp": "^9.1.0",
     "c8": "^7.13.0",
     "eslint": "^8.38.0",
+    "express": "^4.18.1",
     "pnpm": "^8.2.0",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4",
