--- a/template/package.json
+++ b/template/package.json
@@ -20,9 +20,11 @@
     "vue-router": "^4.1.6",
     "@arco-design/web-vue": "^2.45.1",
     "axios": "^1.3.6",
+    "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "js-cookie": "^3.0.1",
-    "pinia": "^2.0.35"
+    "pinia": "^2.0.35",
+    "@estjs/zero-vue":"workspace:*"
   },
   "devDependencies": {
     "@estjs/eslint-config": "^0.6.9",
