--- a/template/package.json
+++ b/template/package.json
@@ -42,6 +42,7 @@
     "pnpm": "^8.3.1",
     "typescript": "^5.0.4",
     "unocss": "^0.51.5",
+    "sass": "^1.55.0",
     "vite": "^4.3.1",
     "lodash": "^4.17.21",
     "vitest": "^0.30.1",
